LeasedLineTools/src/objects/Virgin_Media_Product__c.object
<CustomObject>
    <fields>
        <fullName>BPT_Quote__c</fullName>
        <label>BPT Quote</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer__c</fullName>
        <label>Bearer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Price__c</fullName>
        <label>Connection Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flavour__c</fullName>
        <label>Flavour</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Virgin Media Products</relationshipLabel>
        <relationshipName>Virgin_Media_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Term__c</fullName>
        <label>Product Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Price__c</fullName>
        <label>Rental Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_B_Access__c</fullName>
        <label>Site B Access</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Ref__c</fullName>
        <description>Leased Line Quote Request foreign key</description>
        <label>Site Ref</label>
        <referenceTo>Leased_Line_Quote_Request__c</referenceTo>
        <relationshipLabel>Virgin Media Products</relationshipLabel>
        <relationshipName>Virgin_Media_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Pricing_Summary__c</fullName>
        <label>Total Pricing Summary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique field required by the upsert function - a combination of Leased_Line_Quote_Request__c, Bearer__c and Bandwidth__c</description>
        <externalId>true</externalId>
        <label>Unique</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Virgin Media Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Virgin Media Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virgin Media Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>